# DeeplearningFinalUwU

./: EDA.ipynb  README.md  eval.csv  eval_best.csv  evaluation.ipynb  models.ipynb  process.py  pyproject.toml
